Changes from jTDS 0.9
=========================

12/05/2004 - Alin Sinpalean
 o Applied Mike's fix for bug [1078927] Callable statement fails (callable
   statements with both literal parameters and parameter markers failed to
   execute).

12/03/2004 - Alin Sinpalean
 o Corrected bug [1078325] Multithreaded prepared statement errors (or at least
   I sure do hope so). The problem seems to have been the fact that preparing
   a statement and executing it was not a single, atomic operation and a
   rollback() could occur between the two basically "unpreparing" the
   statement. Also synchronized some methods in ConnectionJDBC2 that looked
   like they needed some sync.
 o Corrected some exception error messages that contained incorrect hexadecimal
   values.
 o Corrected an issue in SQLParser that prevented CallableStatements from
   working properly with procedures containing semicolons in their name (e.g.
   "test;1").
 o Modified BlobImpl.getBytes() and ClobImpl.getString() to return as much data
   as available instead of throwing an SQLException if the length parameter is
   too big (this is my understanding of the API documentation).
 o Removed ColData from CVS (forgot to do it when applying the patch).
 o Applied Mike's patch [1077886] XA Emulation mode.

12/02/2004 - Alin Sinpalean
 o Added a unit test (and made a couple of minor fixes) for column collation
   support. Seems to work fine now.
 o Fixed TimestampTest.testWriteDate() to actually test whether dates are
   written correctly (i.e. w/o their time component) into the DB.

12/01/2004 - Alin Sinpalean
 o Applied patch [1076337] Elimination of ColData class. Thanks a lot, Mike for
   all the effort!
 o Applied patch [1076383] ResultSetMetaData for more complex statements for
   SQL Server.

11/30/2004 - Alin Sinpalean
 o Corrected bug [1075977] setObject() causes SQLException.

11/29/2004 - Alin Sinpalean
 o Fixed some NPEs caused by the new per column collation support.