@@ -1,6 +1,9 @@
 Changes from jTDS 0.9
 =========================
 
+12/06/2004 - Alin Sinpalean
+ o Minor code cleanup using FindBugs.
+
 12/05/2004 - Alin Sinpalean
  o Applied Mike's fix for bug [1078927] Callable statement fails (callable
    statements with both literal parameters and parameter markers failed to
